--- a/i3/config
+++ b/i3/config
@@ -192,28 +192,6 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
-
-
-#bar {
-#    status_command    i3status
-#    position          bottom
-#    #mode              hide
-#    workspace_buttons yes
-#    tray_output       none
-#    
-#    font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-#
-#    colors {
-#        background #000000
-#        statusline #ffffff
-#
-#        focused_workspace  #ffffff #285577
-#        active_workspace   #ffffff #333333
-#        inactive_workspace #888888 #222222
-#        urgent_workspace   #ffffff #900000
-#    }
-#}
-
 client.focused              #382060 #2853ff #ffffff #5657f5 #2f343f
 client.focused_inactive     #2f343f #2f343f #ffffff #2f343f #2f343f
 client.unfocused            #2f343f #2f343f #ffffff #2f343f #2f343f
@@ -230,7 +208,8 @@ bindsym --release Print exec --no-startup-id sh $HOME/.config/i3/screenshot.sh f
 bindsym --release Ctrl+Print exec --no-startup-id sh $HOME/.config/i3/screenshot.sh full clipboard
 
 # exec asusctl bios -p false
-exec setxkbmap -layout us,ru -option grp:alt_space_toggle
+# exec setxkbmap -layout us,ru -option grp:alt_space_toggle
+bindsym Mod1+space exec ~/.config/i3status/i3layout.sh cycle us ru
 # exec --no-startup-id nitrogen --restore
 
 for_window [class=".*"] border pixel 0
@@ -242,5 +221,6 @@ exec_always --no-startup-id sh $HOME/.config/polybar/shades/launch.sh
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+#        status_command ~/.config/i3status/i3status.sh
+  status_command i3status | ~/.config/i3status/i3layout.sh i3status
 }
