add alacritty submodules

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-!.gitignore
-!./nvim
-!./picom
-!./kitty
-!./i3
-!./i3status
-!./alacritty/**
-!./rofi
-!./waybar
-!./sway
-!./conky
+!.gitignore/**
+!./nvim/**
+!./picom/**
+!./kitty/**
+!./i3/**
+!./i3status/**
+!./alacritty/**/**
+!./rofi/**
+!./waybar/**
+!./sway/**
+!./conky/**
 *
