--- a/i3/config
+++ b/i3/config
@@ -9,43 +9,32 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-# exec xinput --set-prop 'ELAN1201:00 04F3:3098 Touchpad' 329 0.3
-# exec xinput --set-prop 'ELAN1201:00 04F3:3098 Touchpad' 318 1
-# exec xinput --set-prop 'ELAN1201:00 04F3:3098 Touchpad' 338 1
-
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:Terminus Bold 16
-
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:Liga SFMono Nerd Font Regular 16
+font pango:Liga SFMono Nerd Font SemiBold 12
 
-# Start XDG autostart .desktop files using dex. See also
-# https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex-autostart --autostart --environment i3
 
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 # exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-# exec --no-startup-id nm-applet
-
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id mixer vol +10 && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id mixer vol -10 && $refresh_i3status
 # bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 # bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 # bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 # bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%-
+# bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+
+# bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%-
 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -53,16 +42,18 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec urxvt
-bindsym $mod+Return exec kitty
+#bindsym $mod+Return exec kitty
+bindsym $mod+Return exec alacritty
+#bindsym $mod+Return exec wezterm
+#bindsym $mod+Return exec st
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-#bindsym $mod+d exec --no-startup-id dmenu_run
 #bindsym $mod+d exec --no-startup-id dmenu_run  -nb '#000' -sf '#ffffff' -sb '#576ddb' -nf '#ffffff' -i -fn "BQN386 Unicode:size=18" -x 0 -z 2560 -y 0
-#bindsym $mod+d exec --no-startup-id dmenu_run  -nb '#000' -sf '#ffffff' -sb '#2853ff' -nf '#ffffff' -i -fn "Terminus:Bold:size=16"
-bindsym $mod+d exec --no-startup-id dmenu_run  -nb '#000' -sf '#ffffff' -sb '#2853ff' -nf '#ffffff' -i -fn "Liga SFMono Nerd Font:Semi-Bold:size=16"
+bindsym $mod+d exec --no-startup-id dmenu_run  -nb '#000' -sf '#ffffff' -sb '#2853ff' -nf '#ffffff' -i -fn "Terminus:Bold:size=16"
+#bindsym $mod+d exec --no-startup-id dmenu_run  -nb '#000' -sf '#ffffff' -sb '#1e57e7' -nf '#ffffff' -i -fn "Inconsolata for Powerline:Semi-Bold:size=14"
 #bindsym $mod+i exec bash ~/Documents/scripts/
 #bindsym $mod+d exec --no-startup-id rofi -show drun -show-icons -location 2 -yoffset 30
 #bindsym $mod+Tab exec --no-startup-id rofi -show window -show-icons -location 2 -yoffset 30
@@ -71,10 +62,6 @@ bindsym $mod+d exec --no-startup-id dmenu_run  -nb '#000' -sf '#ffffff' -sb '#28
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
-
-
-default_border pixel 0
-default_floating_border pixel 0
 
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
@@ -110,10 +97,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-# bindsym $mod+% split h
+bindsym $mod+% split h
 
 # split in vertical orientation
-# bindsym $mod+" split v
+bindsym $mod+" split v
 
 #bindsym $mod+space focus mode_toggle
 
@@ -192,7 +179,7 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
-client.focused              #382060 #2853ff #ffffff #5657f5 #2f343f
+client.focused              #2f343f #58a6ff #000000 #2f343f #2f343f
 client.focused_inactive     #2f343f #2f343f #ffffff #2f343f #2f343f
 client.unfocused            #2f343f #2f343f #ffffff #2f343f #2f343f
 client.urgent               #2f343f #2f343f #ffffff #2f343f #2f343f
@@ -208,19 +195,30 @@ bindsym --release Print exec --no-startup-id sh $HOME/.config/i3/screenshot.sh f
 bindsym --release Ctrl+Print exec --no-startup-id sh $HOME/.config/i3/screenshot.sh full clipboard
 
 # exec asusctl bios -p false
-# exec setxkbmap -layout us,ru -option grp:alt_space_toggle
-bindsym Mod1+space exec ~/.config/i3status/i3layout.sh cycle us ru
-# exec --no-startup-id nitrogen --restore
+exec setxkbmap -layout us,ru -option grp:alt_space_toggle
+exec setxkbmap -option ctrl:nocaps     
+exec xset r rate 200 30
 
-for_window [class=".*"] border pixel 0
+# bindsym Mod1+space exec ~/.config/i3status/i3layout.sh cycle us ru
 
-exec_always --no-startup-id sh $HOME/.config/i3/init.sh
-exec_always --no-startup-id sh $HOME/.config/i3/touchpad.sh
-exec_always --no-startup-id sh $HOME/.config/polybar/shades/launch.sh
+# for_window [class=".*"] border pixel 0
+default_border pixel 0
+default_floating_border pixel 0
+
+exec_always --no-startup-id bash $HOME/.config/i3/touchpad.sh
 # exec_always --no-startup-id setxkbmap -layout ru,us -option grp:win_space_toggle
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
 #        status_command ~/.config/i3status/i3status.sh
-  status_command i3status | ~/.config/i3status/i3layout.sh i3status
+  status_command ~/.config/i3/conkybar.sh
+	colors {
+		background #000000
+		statusline #000000
+		focused_workspace #000000 #91bfff #000000
+		active_workspace #FFFFFF #ffffff
+		inactive_workspace #91bfff  #000000 #ffffff #ffffff #ffffff
+		urgent_workspace #FFFFFF #900000
+	}
+
 }
